# DeMLE

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  docker-compose.yml
contracts/: DEMO-GUIDE.md  README.md  demle-dashboard.html  hardhat.config.ts  package-lock.json  package.json  realtime-dashboard.html  start-live-dashboard.sh  tsconfig.json
contracts/artifacts/@openzeppelin/contracts/token/ERC20/ERC20.sol/: ERC20.dbg.json
contracts/artifacts/@openzeppelin/contracts/token/ERC20/extensions/IERC20Metadata.sol/: IERC20Metadata.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/Context.sol/: Context.dbg.json
contracts/artifacts/contracts/DEMLE.sol/: DEMLE.dbg.json  DEMLE.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: DEMLE.sol
contracts/scripts/: analytics.ts  check-balances.ts  check-my-balances.ts  check-real-balances.ts  demo.ts  deploy.ts  live-dashboard.ts  realtime-demo.ts  setup-demo.ts  simple-demo.ts  web-dashboard.ts
contracts/test/: DEMLE.test.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: DEMLE.ts  index.ts
contracts/typechain-types/factories/contracts/: DEMLE__factory.ts  index.ts
demle-core/: Cargo.toml
demle-core/src/: difficulty.rs  lib.rs  proof.rs  types.rs
demle-fp8/: Cargo.toml
demle-fp8/src/: attention.rs  batch_norm.rs  convolution.rs  fp8.rs  gemm.rs  lib.rs  operations.rs
demle-miner/: Cargo.toml
demle-miner/src/: gpu_optimized.rs  main.rs
demle-rpc/: Cargo.toml
demle-rpc/src/: client.rs  contract.rs  lib.rs
deploy/: HYPERBOLIC-GUIDE.md  hyperbolic-setup.sh
docker/: Dockerfile.h100
scripts/: h100-balanced-performance.sh  h100-fast-completion.sh  h100-max-performance.sh  h100-memory-optimized.sh  h100-optimize.sh  quick-setup.sh
