[workspace]
members = [
    "demle-miner",
    "demle-core",
    "demle-fp8",
    "demle-rpc"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and ML dependencies
nalgebra = "0.32"
half = "2.3"
rand = "0.8"
rand_distr = "0.4"

# Networking
reqwest = { version = "0.11", features = ["json"] }
web3 = "0.19"

# TUI
crossterm = "0.27"
ratatui = "0.24"

# GPU acceleration (optional)
candle-core = { version = "0.3", optional = true }
wgpu = { version = "0.18", optional = true }

# Testing and benchmarking
criterion = "0.5"
proptest = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
debug = true 