[package]
name = "demle-fp8"
version = "0.1.0"
edition = "2021"
description = "FP8 machine learning operations for DEMLE mining"

[dependencies]
demle-core = { path = "../demle-core", features = [] }
nalgebra = { workspace = true }
half = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

# GPU support with CUDA
candle-core = { version = "0.9", optional = true, features = ["cuda"] }
candle-nn = { version = "0.9", optional = true }
wgpu = { version = "0.19", optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[features]
default = []
gpu = ["candle-core", "candle-nn", "wgpu"]
cuda = ["candle-core", "candle-nn", "demle-core/cuda"] 