[package]
name = "demle-miner"
version = "0.1.0"
edition = "2021"
description = "DEMLE cryptocurrency miner with FP8 ML operations"

[[bin]]
name = "demle-miner"
path = "src/main.rs"

[dependencies]
demle-core = { path = "../demle-core" }
demle-fp8 = { path = "../demle-fp8" }
demle-rpc = { path = "../demle-rpc" }

tokio = { version = "1.0", features = ["full"] }
rayon = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { workspace = true }

# TUI
crossterm = { workspace = true }
ratatui = { workspace = true }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Utilities
md5 = "0.7"

# Metrics and monitoring
metrics = "0.21"
metrics-exporter-prometheus = { version = "0.12", optional = true }

# GPU acceleration with Candle
candle-core = { version = "0.9", features = ["cuda"] }
candle-nn = "0.9"
candle-transformers = "0.9"

[features]
default = []
gpu = ["demle-fp8/gpu"]
cuda = ["demle-fp8/cuda"]
prometheus = ["metrics-exporter-prometheus"] 