[package]
name = "demle-rpc"
version = "0.1.0"
edition = "2021"
description = "RPC client for DEMLE blockchain interactions"

[dependencies]
demle-core = { path = "../demle-core" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
web3 = { workspace = true }

# Ethereum types
ethers = "2.0"
ethabi = "18.0"

# Utilities
md5 = "0.7"

[dev-dependencies]
tokio-test = "0.4" 